lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:2: error: not found: type Segment
  def getLandingZone():Segment = {
                       ^Lander:15: error: too many arguments for constructor Array: (_length: Int)Array[T]
	return new Array((test1.x,test1.y),(test2.x,test2.y))
               ^Lander:23: error: not found: value zone
	if (getX() <= zone(0).x) {return 0}
                      ^Lander:25: error: not found: value zone
		if (getX()>=zone(1).x) {return 2}
                            ^Lander:25: error: type mismatch;
 found   : Unit
 required: Int
		if (getX()>=zone(1).x) {return 2}
                ^Lander:31: error: not found: value setPousseedesiree
  		setPousseedesiree(4) 
                ^Lander:37: error: not found: value setPousseedesiree
setPousseedesiree(4)
^Lander:39: error: not found: value setPousseedesiree
else setPousseedesiree(0)
     ^Lander:43: error: not found: value setPousseedesire
  		setPousseedesire(4)
                ^